--- a/apps/web/src/lib/styles/globals.css
+++ b/apps/web/src/lib/styles/globals.css
@@ -3,29 +3,34 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-	padding: 0;
-	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-		Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	@apply font-bold;
 }
 
-a {
-	color: inherit;
-	text-decoration: none;
+h1 {
+	@apply text-6xl;
+}
+h2 {
+	@apply text-5xl;
 }
 
-* {
-	box-sizing: border-box;
+h3 {
+	@apply text-4xl;
 }
 
-@media (prefers-color-scheme: dark) {
-	html {
-		color-scheme: dark;
-	}
-	body {
-		color: white;
-		background: black;
-	}
+h4 {
+	@apply text-3xl;
+}
+
+h5 {
+	@apply text-2xl;
+}
+
+h6 {
+	@apply text-xl;
 }
