--- a/apps/web/src/lib/styles/globals.css
+++ b/apps/web/src/lib/styles/globals.css
@@ -34,3 +34,27 @@ h5 {
 h6 {
 	@apply text-xl;
 }
+
+/* cmdk component */
+[cmdk-item] {
+	&[aria-selected='true'] {
+		@apply bg-slate-700 text-slate-200;
+	}
+
+	&[aria-disabled='true'] {
+		@apply text-slate-400 cursor-not-allowed;
+	}
+
+	&:active {
+		transition-property: background;
+		@apply bg-slate-600;
+	}
+
+	&:first-child {
+		@apply mt-2;
+	}
+
+	& + [cmdk-item] {
+		@apply mt-1;
+	}
+}
